Fixed navbar and animations on mobile

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -49,6 +49,8 @@ nav
   animation: 1s ease-in-out slidedown
 .sidebar
   animation: 1s ease-in-out slideup
+nav.socials
+  animation: .5s ease-in-out slideup
 @keyframes slideup
   0%
     opacity: 0
