--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -13,6 +13,11 @@
 	a
 		color: #fff
 
+.navbar-andross .navbar-brand
+	color: #fff
+	
+.fa-bars
+	color: #fff
 .newsletter
 	background: darken($theme, 3%)
 
